force-app/main/default/objects/Account/fields/C2L_Program__c.field-meta.xml
<CustomField>
    <fullName>C2L_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C2L Program</label>
    <referenceTo>Launchpad__Job__c</referenceTo>
    <relationshipLabel>Placement Site</relationshipLabel>
    <relationshipName>Placement_Site</relationshipName>
    <type>Lookup</type>
</CustomField>