force-app/main/default/objects/Account/fields/Historical_ID__c.field-meta.xml
<CustomField>
    <fullName>Historical_ID__c</fullName>
    <label>Historical ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>