force-app/main/default/objects/Account/fields/Provider_Program__c.field-meta.xml
<CustomField>
    <fullName>Provider_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Program</label>
    <referenceTo>Launchpad__Program__c</referenceTo>
    <relationshipLabel>Provider</relationshipLabel>
    <relationshipName>Provider</relationshipName>
    <type>Lookup</type>
</CustomField>