force-app/main/default/objects/Account/fields/Supervisor_Clearances_Required__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Clearances_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supervisor Clearances Required</label>
    <type>Checkbox</type>
</CustomField>