force-app/main/default/objects/Account/recordTypes/Launchpad__Contractor.recordType-meta.xml
<RecordType>
    <fullName>Launchpad__Contractor</fullName>
    <active>true</active>
    <label>Contractor</label>
</RecordType>