force-app/main/default/objects/Account/recordTypes/Launchpad__Employer.recordType-meta.xml
<RecordType>
    <fullName>Launchpad__Employer</fullName>
    <active>true</active>
    <description>An employer (company) record owned by a Job Placement Specialist.</description>
    <label>Employer</label>
</RecordType>