force-app/main/default/objects/Account/recordTypes/Launchpad__Job_Center_Site.recordType-meta.xml
<RecordType>
    <fullName>Launchpad__Job_Center_Site</fullName>
    <active>true</active>
    <label>Job Center/Site</label>
</RecordType>