force-app/main/default/objects/Account/recordTypes/Launchpad__Partners.recordType-meta.xml
<RecordType>
    <fullName>Launchpad__Partners</fullName>
    <active>true</active>
    <label>Partners</label>
</RecordType>