force-app/main/default/objects/Account/recordTypes/Launchpad__Training_Provider.recordType-meta.xml
<RecordType>
    <fullName>Launchpad__Training_Provider</fullName>
    <active>true</active>
    <label>Training Provider</label>
</RecordType>