force-app/main/default/objects/Account/listViews/Launchpad__Job_Centers_Sites.listView-meta.xml
<ListView>
    <fullName>Launchpad__Job_Centers_Sites</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Launchpad__Available_in_Community__c</columns>
    <columns>Launchpad__Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Launchpad__Job_Center_Site</value>
    </filters>
    <label>Job Centers/Sites</label>
</ListView>