force-app/main/default/objects/Account/listViews/Launchpad__Training_Provider_Records.listView-meta.xml
<ListView>
    <fullName>Launchpad__Training_Provider_Records</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Launchpad__Owner_Full_Name__c</columns>
    <columns>Launchpad__Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Launchpad__Training_Provider</value>
    </filters>
    <label>Training Provider Accounts</label>
</ListView>